[gd_scene load_steps=2 format=3 uid="uid://kmnkhprarp8e"]

[ext_resource type="Script" uid="uid://bkw6vemxqjdcd" path="res://scripts/ui/DeathScreen.gd" id="1_wpgvk"]

[node name="DeathScreen" type="CanvasLayer"]
script = ExtResource("1_wpgvk")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.294118)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -64.5
offset_right = 104.0
offset_bottom = 64.5
grow_horizontal = 2
grow_vertical = 2

[node name="YouDIed" type="Label" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "You Died"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WaveLabel" type="Label" parent="ColorRect/VBoxContainer"]
layout_mode = 2
text = "Wave: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnemiesLabel" type="Label" parent="ColorRect/VBoxContainer"]
layout_mode = 2
text = "Enemies Killed:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
text = "Restart"
